# VIDA_Learning_Objectives

./: .env  Prompt.md  README.md  WORKFLOW.md  pyproject.toml
src/tests/: test_utils.py
src/uoes_learning_objectives/: app.py  blooms_taxonomy.py  objective_analyzer.py  objective_creator.py  sample_objectives.py  ui_components.py
src/uoes_learning_objectives.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
